update the inventory page template

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						</button>
 					</div>
 				</div>
-				<div class="row" style="margin-top:16px;">
+				<div class="row">
 					<div id="wrapper">
 						<div id="sidebar-wrapper" class="box-right">
 							<ul class="sidebar-nav">
@@ -56,35 +56,51 @@
 							<div class="page-content">
 								<div class="container">
 									<div class="row">
-										<div class="col-md-1">
-											<div class="">1</div>
+										<div class="col-md-1" style="margin-top:3%;">
+											<div class="vertical-text-left">Skip</div>
 										</div>
-										<div class="col-md-4 no-gutter" style="padding-right:5px;padding-bottom:5px;">
-											<div class="shadow-z-1 maxtrix-box-min-height"></div>
+										<div class="col-md-10 no-gutter" style="padding-right:5px;padding-bottom:5px;">
+											<div class="shadow-z-1 matrix-box-half bg-danger"></div>
 										</div>
-										<div class="col-md-4 no-gutter">
-											<div class="shadow-z-1 maxtrix-box-min-height"></div>
-										</div>
-										<div class="col-md-3"></div>
+										<div class="col-md-1"></div>
 									</div>
 									<div class="row">
-										<div class="col-md-1">
-											<div class="">1</div>
+										<div class="col-md-1" style="margin-top:3%;">
+											<div class="vertical-text-left">Transfer</div>
 										</div>
-										<div class="col-md-4 no-gutter" style="padding-right:5px;">
-											<div class="shadow-z-1 maxtrix-box-min-height"></div>
+										<div class="col-md-10 no-gutter" style="padding-right:5px;padding-bottom:5px;">
+											<div class="shadow-z-1 matrix-box-half bg-warning"></div>
 										</div>
-										<div class="col-md-4 no-gutter">
-											<div class="shadow-z-1 maxtrix-box-min-height"></div>
-										</div>
-										<div class="col-md-3"></div>
+										<div class="col-md-1"></div>
 									</div>
 									<div class="row">
-										
+										<div class="col-md-1" style="margin-top:3%;">
+											<div class="vertical-text-left">Optimize</div>
+										</div>
+										<div class="col-md-10 no-gutter" style="padding-right:5px;padding-bottom:5px;">
+											<div class="shadow-z-1 matrix-box-half bg-info"></div>
+										</div>
+										<div class="col-md-1"></div>
+									</div>
+									<div class="row">
+										<div class="col-md-1" style="margin-top:3%;">
+											<div class="vertical-text-left">Perform</div>
+										</div>
+										<div class="col-md-10 no-gutter" style="padding-right:5px;padding-bottom:5px;">
+											<div class="shadow-z-1 matrix-box-half bg-success"></div>
+										</div>
+										<div class="col-md-1"></div>
 									</div>
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-2 pull-right no-gutter">
+						<button class="btn btn-primary btn-raised btn-md pull-right" data-ng-click="goToToDoPage()">
+							<span>To-do page</span>
+						</button>
 					</div>
 				</div>
 			</div>
