--- a/index.html
+++ b/index.html
@@ -106,8 +106,16 @@
 			</div>
 			
 			<div id="today-todos" class="container-fluid full-height" ng-controller="ToDos.ToDoController" ng-class="{'hidden' : !isCurrentPage(), '': isCurrentPage()}">
-				<div class="row">
-					
+				<div class="row full-height">
+					<div class="col-md-3 full-height box-right">
+						<ul class="sidebar-nav full-width">
+							<li class="border-left-green"><p>Another link</p></li>
+							<li class="border-left-green"><p>Next link</p></li>
+							<li class="border-left-green"><p>Last link</p></li>
+						</ul>
+					</div>
+					<div class="col-md-6 full-height box-right"></div>
+					<div class="col-md-3 full-height"></div>
 				</div>
 			</div>
 		</div>
