update new mockups

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
 							<li class="border-left-green"><p>Another link</p></li>
 							<li class="border-left-green"><p>Next link</p></li>
 							<li class="border-left-green"><p>Last link</p></li>
+							<li class="border-left-green"><p>Another link</p></li>
+							<li class="border-left-green"><p>Next link</p></li>
+							<li class="border-left-green"><p>Last link</p></li>
+							<li class="border-left-green"><p>Another link</p></li>
+							<li class="border-left-green"><p>Next link</p></li>
+							<li class="border-left-green"><p>Last link</p></li>
+							<li class="border-left-green"><p>Another link</p></li>
+							<li class="border-left-green"><p>Next link</p></li>
+							<li class="border-left-green"><p>Last link</p></li>
 						</ul>
 					</div>
 					<div class="col-md-6 full-height box-right"></div>
