--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ADPomodoroApp" ng-csp="">
+<html ng-app="AgilePomodoroApp" ng-csp="">
 	<head>
 		<meta charset="utf-8" />
 		<title>Activity Inventory</title>
@@ -94,7 +94,7 @@
 				</div>
 			</div>
 			
-			<div id="today-todos" class="container-fluid full-height" ng-controller="ToDoController" ng-class="{'hidden' : !isCurrentPage(), '': isCurrentPage()}" style="padding-top:32px;">
+			<div id="today-todos" class="container-fluid full-height" ng-controller="TaskController" ng-class="{'hidden' : !isCurrentPage(), '': isCurrentPage()}" style="padding-top:32px;">
 				<div class="row">
 					<div class="col-md-4" style="padding-left:2px;padding-right:2px;">
 						<div class="title-container shadow-z-1">
@@ -149,11 +149,12 @@
 		<script type="text/javascript" src="js/material.min.js"></script>
 		<script type="text/javascript" src="js/ripples.min.js"></script>
 		<script type="text/javascript" src="js/global.js"></script>
+		<script type="text/javascript" src="js/shared/shared.pageService.js"></script>
+		<script type="text/javascript" src="js/shared/shared.dbService.js"></script>
+		<script type="text/javascript" src="js/shared/shared.module.js"></script>
 		<script type="text/javascript" src="js/controllers/WeekGoalController.js"></script>
 		<script type="text/javascript" src="js/controllers/InventoryController.js"></script>
-		<script type="text/javascript" src="js/controllers/TodoController.js"></script>
-		<script type="text/javascript" src="js/shared/shared.service.js"></script>
-		<script type="text/javascript" src="js/shared/shared.module.js"></script>
+		<script type="text/javascript" src="js/controllers/TaskController.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		
 	</body>
