--- a/index.html
+++ b/index.html
@@ -180,6 +180,32 @@
 		</script>
 		<script type="text/javascript" src="js/global.js">
 		</script>
+		<script type="text/javascript" src="js/entities/Interruption.js">
+		</script>
+		<script type="text/javascript" src="js/entities/InterruptionExternal.js">
+		</script>
+		<script type="text/javascript" src="js/entities/InterruptionInternal.js">
+		</script>
+		<script type="text/javascript" src="js/entities/PackageInventory.js">
+		</script>
+		<script type="text/javascript" src="js/entities/PackageTodo.js">
+		</script>
+		<script type="text/javascript" src="js/entities/PackageUrgent.js">
+		</script>
+		<script type="text/javascript" src="js/entities/Task.js">
+		</script>
+		<script type="text/javascript" src="js/entities/TaskOptimize.js">
+		</script>
+		<script type="text/javascript" src="js/entities/TaskPerform.js">
+		</script>
+		<script type="text/javascript" src="js/entities/TaskSkip.js">
+		</script>
+		<script type="text/javascript" src="js/entities/TaskTransfer.js">
+		</script>
+		<script type="text/javascript" src="js/entities/WeekGoal.js">
+		</script>
+		<script type="text/javascript" src="js/repositories/Repository.js">
+		</script>
 		<script type="text/javascript" src="js/shared/shared.pageService.js">
 		</script>
 		<script type="text/javascript" src="js/shared/shared.dbService.js">
