add shared dbService

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div class="main-content full-height">
 			<div id="week-goal" class="container-fluid full-height"
 			  ng-controller="WeekGoalController"
+			  ng-init="init()"
 			  ng-class="{'hidden' : !isCurrentPage(), '': isCurrentPage()}">
 				<div class="row" style="margin-top:25%;">
 					<div class="col-md-1"></div>
@@ -180,35 +181,13 @@
 		</script>
 		<script type="text/javascript" src="js/global.js">
 		</script>
-		<script type="text/javascript" src="js/entities/Interruption.js">
-		</script>
-		<script type="text/javascript" src="js/entities/InterruptionExternal.js">
-		</script>
-		<script type="text/javascript" src="js/entities/InterruptionInternal.js">
-		</script>
-		<script type="text/javascript" src="js/entities/PackageInventory.js">
-		</script>
-		<script type="text/javascript" src="js/entities/PackageTodo.js">
-		</script>
-		<script type="text/javascript" src="js/entities/PackageUrgent.js">
-		</script>
-		<script type="text/javascript" src="js/entities/Task.js">
-		</script>
-		<script type="text/javascript" src="js/entities/TaskOptimize.js">
-		</script>
-		<script type="text/javascript" src="js/entities/TaskPerform.js">
-		</script>
-		<script type="text/javascript" src="js/entities/TaskSkip.js">
-		</script>
-		<script type="text/javascript" src="js/entities/TaskTransfer.js">
-		</script>
-		<script type="text/javascript" src="js/entities/WeekGoal.js">
-		</script>
-		<script type="text/javascript" src="js/repositories/Repository.js">
+		<script type="text/javascript" src="js/db.js">
 		</script>
 		<script type="text/javascript" src="js/shared/shared.pageService.js">
 		</script>
 		<script type="text/javascript" src="js/shared/shared.dbService.js">
+		</script>
+		<script type="text/javascript" src="js/shared/openDbService.js">
 		</script>
 		<script type="text/javascript" src="js/shared/shared.module.js">
 		</script>
