--- a/taskInfo.html
+++ b/taskInfo.html
@@ -1,6 +1,6 @@
 <div class="col-md-3 task-container mid-margin-right" taskType="{{task.taskType}}">
-	<div class="task-header">{{task.header}}</div>
+	<div class="task-header">{{task.description}}</div>
 	<div class="task-pomodoros">
-		<img src="assets/pomodoro.png" width="30" height="30" ng-repeat="pomodoro in [] | range: task.numberOfPomodoros"/>
+		<img src="assets/pomodoro.png" width="30" height="30" ng-repeat="pomodoro in [] | range: task.pomodoros"/>
 	</div>
 </div>
