Update button color

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							type="text">
 					</div>
 					<div class="col-md-2">
-						<button class="btn btn-sub btn-primary btn-raised mdi-content-send"
+						<button class="btn btn-sub btn-raised mdi-content-send"
 						  data-ng-click="go()">
 							<span> GO </span>
 						</button>
