Fix wrong label text of button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="col-md-2">
 						<button class="btn btn-sub btn-raised mdi-content-send"
 						  data-ng-click="go()">
-							<span> GO </span>
+							<span> Next </span>
 						</button>
 					</div>
 				</div>
